Unified build: error: reference to 'FontInfo' is ambiguous https://bugs.webkit.org/show_bug.cgi?id=241524

Reviewed by Darin Adler.

Fix unified build error.

* Source/WebKit/UIProcess/WebPageProxy.h: removed unused forward declaration.
It may cause name clash with ::FontInfo (from QD.framework/Headers/Quickdraw.h)
on Mac when this file is included into the same unified source as another .cpp
file declaring 'using namespace WebKit;'.

Canonical link: https://commits.webkit.org/251471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295466 268f45cc-cd09-0410-ab3c-d52691b4dbfc