Source/WebKit/UIProcess/WebPageProxy.h
@@ -399,7 +399,6 @@ struct EditingRange;
 struct EditorState;
 struct FrameTreeNodeData;
 struct FocusedElementInformation;
-struct FontInfo;
 struct FrameInfoData;
 struct InputMethodState;
 struct InsertTextOptions;
